feat/excel+fixes
